feat: add bunny-storage library

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 packages:
   - 'libs/bunny-sdk'
+  - 'libs/bunny-storage'
   - 'example/simple-http-page'
   - 'example/deno-simple-http-page'
   - 'example/deno-middleware-http'
