--- a/libs/bunny-storage/tsconfig.json
+++ b/libs/bunny-storage/tsconfig.json
@@ -14,7 +14,7 @@
     "skipLibCheck": true,
     "allowImportingTsExtensions": true,
     "allowSyntheticDefaultImports": true,
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
     "noUnusedParameters": true,
     "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
