--- a/libs/bunny-sdk/package.json
+++ b/libs/bunny-sdk/package.json
@@ -4,6 +4,14 @@
   "main": "dist/lib.js",
   "module": "esm/lib.mjs",
   "types": "dist/_tsup-dts-rollup.d.ts",
+  "exports": {
+    ".": {
+      "import": "./esm/lib.mjs",
+      "require": "./dist/lib.js",
+      "types": "./dist/_tsup-dts-rollup.d.ts",
+      "deno": "./esm/lib.mjs"
+    }
+  },
   "files": [
     "dist",
     "esm",
