--- a/libs/bunny-sdk/package.json
+++ b/libs/bunny-sdk/package.json
@@ -9,13 +9,15 @@
       "import": "./esm/lib.mjs",
       "require": "./dist/lib.js",
       "types": "./dist/_tsup-dts-rollup.d.ts",
-      "deno": "./esm/lib.mjs"
+      "deno": "./esm/lib.mjs",
+      "node": "./esm-node/lib.mjs"
     }
   },
   "files": [
     "dist",
     "esm",
-    "esm-bunny"
+    "esm-bunny",
+    "esm-node"
   ],
   "scripts": {
     "lint": "eslint src",
