fix: https://github.com/pnpm/pnpm/issues/8042

--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,6 @@
 engine-strict=true
 strict-peer-dependencies=false
+link-workspace-packages=true
 
 public-hoist-pattern[]=*eslint*
 public-hoist-pattern[]=*prettier*
