Implement Intial Stub Cache API Template
This is not the real implementation, just a stub place holder to ensure we
are happy with the API before implementing fully

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,5 +3,6 @@ packages:
   - 'libs/bunny-storage'
   - 'example/simple-http-page'
   - 'example/deno-simple-http-page'
+  - 'example/deno-simple-http-cache'
   - 'example/deno-middleware-http'
   - 'example/middleware-simple-http'
